# system-configurations

./: .gitignore  all-homes.nix  all-machines.nix  environment.nix  home.nix  notes  system.nix
home/: common.nix  eliza.nix  isbell.nix  lucy.nix  template.nix  workstation.nix  yubikey.nix
home/acpi/: default.nix
home/basic/: default.nix
home/cli-utils/: default.nix
home/common/: default.nix  git.nix  nix.nix  software.nix  vim.nix  zsh.nix
home/daw/: default.nix  software.nix
home/dev/: default.nix
home/direnv/: default.nix  perso.envrc
home/git/: default.nix
home/graphical/: default.nix
home/graphical/taffybar/laptop/: my-taffybar.cabal
home/haskell/: default.nix
home/internet/: default.nix
home/laptop/: software.nix
home/media/: default.nix
home/nix/: default.nix
home/perf-monitoring/: default.nix
home/personal/: default.nix  software.nix
home/search/: default.nix
home/secrets/: default.nix
home/socials/: default.nix
home/taffybar/: default.nix
home/taskwarrior/: default.nix
home/theorems/: default.nix  software.nix
home/wine/: default.nix
home/workstation/: default.nix  direnv.nix  haskell.nix  secrets.nix  software.nix  taffybar.nix  taskwarrior.nix  ui.nix  urxvt.nix  xcompose.nix  xsession.nix  zsh.nix
home/xsession/: default.nix
home/yubikey/: default.nix
home/zsh/: basic.nix  full.nix
infra/: default.nix
overlays/: overlays.nix
sources/: default.nix
sources/basalt/: git.json
system/: bitdizzy.io.nix  bluetooth.nix  isbell.nix  keys.nix  lucy.nix  postgresql.nix  virtualbox.nix  virtualisation.nix
(+84 files in other folders)
