name: isbell-taffybar
version: 0
homepage: bitdizzy.io
license: BSD3
author: bitdizzy
maintainer: dev@bitdizzy.io
copyright: bitdizzy
category:
build-type: Simple
extra-source-files:
cabal-version: >=1.10

executable taffybar
  hs-source-dirs: .
  main-is: taffybar.hs
  ghc-options: -threaded -rtsopts -with-rtsopts=-N1
  ghc-prof-options: -fprof-auto
  build-depends: base
               , X11>=1.8
               , bytestring
               , containers
               , directory
               , filepath
               , gi-gtk
               , gtk-sni-tray
               , gtk-strut
               , haskell-gi-base
               , hostname
               , process
               , split
               , taffybar>=3.2.0
               , transformers
               , xdg-basedir
  default-language: Haskell2010
